--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
         <button onclick="scissors()">Scissors</button>
     </center>
 
-    <script src="Weekly Assignment 2.js"></script>
+    <script src="home.js"></script>
 </body>
 </html>
